--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,27 @@
 This file lists the major changes as they appear in the stable branch.  No
 attempt is made to keep this list accurate for the master branch.
 
+Version 24.12.0 (December 20, 2024)
+  * Legion
+    - Numerous bug fixes
+  * Regent
+    - Support for running without the CUDA hijack
+    - Support for NVIDIA Hopper GPU architecture
+  * Tools
+    - Support for exporting profiles to NVTXW format
+    - Simplifications that may improve performance by removing
+       obsolete features
+  * Realm
+    - Remove the need for dynamic_cast in ExternalResource
+    - Support for CUPTI profiling
+    - Support for registring per GPU reduction operations via CUfunction
+    - Add a flag and default disable ATS/HMM support and shared CPU memories
+    - Support for scalable barrier via radix tree
+    - Support for querying resources of NUMA
+    - Support for backtrace via cpptrace
+    - More unit tests
+    - CI coverage for HIP with NVIDIA backend
+
 Version 24.09.0 (September 27, 2024)
   * Legion
     - Bug fixes for control replication and multi-node configurations
