--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,13 @@ Version 25.03.0 (March ??, 2025)
     - Minimum required CMake version is now 3.22
     - Minimum required CUDA version is now 11.7
   * Legion
+    - The one-pool branch of Legion has merged to remove the need for
+       eager allocation percentage
+    - Added support for automatic tracing discovery that is now on
+       by default (but can be disabled with a command line flag)
+    - Added support for user-specified profiling ranges
+    - Reference count sparsity maps correctly so the memory
+       associated with them are now reclaimed
   * Realm
 
 Version 24.12.0 (December 20, 2024)
