--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,8 +16,9 @@ Version 25.06.0 (July 2, 2025)
     - Support attaching to a local archive on disk
     - Upgrade to egui 0.29
   * Realm
-    - Improvements to new realm build system
+    - Improvements to new Realm build system
     - Added automatic payload fragmentation inside the active message layer
+    - Added a switch to disable barrier broadcast, currently off by default
     - Bug fixes
 
 Version 25.03.0 (March 28, 2025)
